[package]
name = "meow-coverage"
version = "0.1.0"
authors = ["EliseZeroTwo <mail@elise.moe>"]
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
hex = "0.4.3"
html-to-string-macro = "0.2.5"
itertools = "0.11.0"
lcov = "0.8.1"
octocrab = "0.29.1"
patch = "0.7.0"
serde = "1.0.185"
serde_json = "1.0.104"
sha2 = "0.10.7"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
