[package]
name = "meow-coverage"
version = "0.1.0"
authors = ["EliseZeroTwo <mail@elise.moe>"]
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
hex = "0.4.3"
html-to-string-macro = "0.2.5"
itertools = "0.11.0"
lcov = "0.8.1"
octocrab = "0.30.1"
patch = "0.7.0"
serde = "1.0.188"
serde_json = "1.0.105"
sha2 = "0.10.7"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["stream"] }
futures = "0.3.28"
time = "0.3.31"
