[package]
name = "cargo-meow-coverage"
authors = ["EliseZeroTwo <mail@elise.moe>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
meow-coverage-shared = { version = "0.1.0", path = "../shared" }
owo-colors = "3.5.0"
thiserror = "1.0.48"
