[package]
name = "meow-coverage-shared"
authors = ["EliseZeroTwo <mail@elise.moe>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [features]
# patch = ["patch"]

[dependencies]
lcov = "0.8.1"
patch = { version = "0.7.0", optional = true }
